--- a/Game1.html
+++ b/Game1.html
@@ -14,17 +14,14 @@
 	<!-- header -->
 	<header>
 		<h1 id=""><span id="pl1">0</span> to <span id="pl2">0</span></h1>
-		<h2>playing to:</h2>
+		<h2>playing to:<span id="ply"> 0 </span></h2>
 	</header>
-
-
-			<input type="text" id="inc" name="inc">
-		<button id="p1">Player 1</button>
-		<button id="p2">Player 2</button>
-		<button id="re">Reset</button>
-
 	
-
+	<input type="number" id="inc" name="inc" value="0">
+	<button id="p1">Player 1</button>
+	<button id="p2">Player 2</button>
+	<button id="re">Reset</button>
+	
 
 
 	<script type="text/javascript" src="Game1.js"></script>
